prisma/prisma-cloud/blocks/sidenav/sidenav.css
/* ... */
/* Book Focus */
.pan-sidenav .toc-books li[data-key] > div:focus a,
.pan-sidenav .toc-books li:not([data-key]) > div:focus a {
  background: var(--book-focus-background-color);
  border: 2px solid var(--book-focus-border-color);
  color: var(--book-active-text-color);
}

.pan-sidenav .toc-books li[data-key] > div:focus .icon-toggle,
.pan-sidenav .toc-books li:not([data-key]) > div:focus .icon-toggle {
  color: var(--book-active-text-color);
}

/* Chapter selected */
/* .pan-sidenav .toc-books li li[aria-expanded="true"][data-key] > div a,
.pan-sidenav .toc-books li li[aria-expanded="true"]:not([data-key]) > div a,
.pan-sidenav
  .toc-books
  li
  li[aria-expanded="true"][data-key]
  > div
  .icon-toggle,
.pan-sidenav
  .toc-books
  li[aria-expanded="true"]:not([data-key])
  > div
  .icon-toggle {
  background: var(--chapter-selected-background-color);
  color: var(--chapter-selected-text-color);
} */

/* Topic selected */
.pan-sidenav .toc-books li li.current[data-key] > div .icon-toggle,
.pan-sidenav .toc-books li li.current:not([data-key]) > div .icon-toggle,
.pan-sidenav .toc-books li li.current[data-key] > div a,
.pan-sidenav .toc-books li li.current:not([data-key]) > div a {
  color: var(--tertiary-action-selected-text-color);
}

.pan-sidenav .toc-books li li.current[data-key] > div a,
.pan-sidenav .toc-books li li.current:not([data-key]) > div a {
  background-color: var(--tertiary-action-selected-background-color);
}

.pan-sidenav .toc-books li li[data-key] > div:hover .icon-toggle,
.pan-sidenav .toc-books li li:not([data-key]) > div:hover .icon-toggle,
.pan-sidenav .toc-books li li[data-key] > div:hover a,
.pan-sidenav .toc-books li li:not([data-key]) > div:hover a {
  color: var(--tertiary-action-active-text-color);
}

.pan-sidenav .toc-books li li[data-key] > div:hover a,
.pan-sidenav .toc-books li li:not([data-key]) > div:hover a {
  background-color: var(--tertiary-action-active-background-color);
}

/* .pan-sidenav .toc-books li[data-key] > div:hover a,
.pan-sidenav .toc-books li:not([data-key]) > div:hover a {
  background-color: var(--tertiary-action-active-background-color);
} */

.pan-sidenav .toc-books li.current > div > a:visited {
  color: var(--tertiary-action-active-text-color);
}

.pan-sidenav .toc-books .icon-toggle {
  align-items: center;
  color: var(--tertiary-action-text-color);
  display: flex;
  font-size: var(--spacing--2);
  position: absolute;
  right: var(--spacing--4);
  transform: rotate(90deg);
  z-index: 1;
}

/* Expand hitbox */
.pan-sidenav .toc-books .icon-toggle:before {
  content: "";
  left: 50%;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
  height: var(--spacing--12);
  width: var(--spacing--8);
}

.pan-sidenav .toc-books .icon-toggle:hover {
  cursor: pointer;
}

.pan-sidenav .toc-books .icon-container .icon {
  height: var(--spacing--2);
  width: var(--spacing--2);
}

/* .pan-sidenav .toc-books li .icon-toggle {
  align-items: center;
  cursor: pointer;
  display: flex;
  font-size: 8px;
  height: 100%;
  position: absolute;
  right: 10px;
  top: 0;
} */

.pan-sidenav .toc-books li > ul {
  display: none;
}

/* .pan-sidenav .toc-books li > div > .icon-toggle svg {
  transform: rotate(-90deg);
} */

.pan-sidenav .toc-books li.current .icon-toggle svg,
.pan-sidenav .toc-books li[aria-expanded="true"] > div > .icon-toggle svg {
  transform: rotate(180deg);
}

.pan-sidenav .toc-books li[aria-expanded="true"] > ul {
  display: block;
}

/* .pan-sidenav .toc-books li[data-key] > ul > li:first-child {
  display: none;
} */

@media (max-width: 1248px) {
  .book .sidenav-container.aside-close {
    padding-left: var(--spacing--4);
    padding-right: var(--spacing--4);
  }
}

@media (min-width: 901px) {
  .pan-sidenav .content .content-inner .toc-books {
    /* 117px is the height of the edition banner */
    max-height: calc(100vh - var(--nav-height) - 117px);
    padding-right: var(--spacing--2);
    overflow-y: scroll;
    scrollbar-gutter: stable;

    /* Scrollbar styles */
    scrollbar-width: thin;
    scrollbar-color: var(--scrollbar-thumb-background-color) transparent;
    scrollbar-gutter: stable;
  }

  .toc-books::-webkit-scrollbar {
    height: 0.375rem;
    width: 8px;
  }

  .toc-books::-webkit-scrollbar-track {
    background-color: transparent;
  }

  .toc-books::-webkit-scrollbar-thumb {
    border-radius: 0.375rem;
  }

  .toc-books:hover::-webkit-scrollbar-thumb {
    background-color: var(--scrollbar-thumb-background-color);
  }

  .pan-sidenav .banner-inner {
    display: flex;
    flex-direction: column;
    gap: 10px;
  }
}

.toc-resizer {
  cursor: ew-resize;
  height: calc(100% - var(--nav-height) - var(--article-top-spacing));
  left: 0;
  position: fixed;
  transform: translateX(375px);
  top: calc(var(--nav-height) + var(--article-top-spacing));
  width: var(--spacing--1);
  z-index: 1;
}

@media (max-width: 900px) {
  .sidenav-container .toggle-aside,
  .sidenav-container.aside-close .sidenav-wrapper .banner {
    display: none;
  }

  .sidenav-container .pan-sidenav .content {
    margin: 0;
  }

  .sidenav-wrapper {
    background: var(--mobile-drawer-background-color);
    left: 0;
    height: calc(100% - var(--nav-height--book));
    top: calc(var(--nav-height--book) - 1px);
    overflow: auto;
    padding-top: var(--spacing--4);
    position: fixed;
    width: 100%;
    z-index: var(--z-index-100--mobile-sidenav);
  }
}

